--- a/MRFSL-SA.ipynb
+++ b/MRFSL-SA.ipynb
@@ -337,6 +337,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "84b1c14c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Training\n",
+    "import higher\n",
+    "epochs = 200\n",
+    "n_tasks = 16\n",
+    "for k in range(epochs) :\n",
+    "    maml_model.train()\n",
+    "    total_loss = 0\n",
+    "    accuracies = []\n",
+    "    n_inner_iter = 16\n",
+    "    inner_opt = torch.optim.SGD(maml_model.parameters(), lr=1e-1)\n",
+    "    meta_opt.zero_grad()\n",
+    "    for i in range(n_tasks) :\n",
+    "      with higher.innerloop_ctx(maml_model, inner_opt, copy_initial_weights=False) as (fnet, diffopt): \n",
+    "        tquery_patches, tsupport_patches, query_labels, support_labels, selected_classes = new_episode(patches_class_salinas,K1,C,N,train_class_labels)\n",
+    "        tsupport_patches = tsupport_patches.to(device)\n",
+    "        tquery_patches = tquery_patches.to(device)\n",
+    "        support_y = np.zeros((int(C*K1),C))                                          \n",
+    "        for i in range(int(C*K1)) :\n",
+    "          x = selected_classes.index(support_labels[i])                           # creation of 1-hot for true labels\n",
+    "          support_y[i][x] = 1. \n",
+    "        support_y = torch.from_numpy(support_y).to(device)    \n",
+    "        query_y = np.zeros((int(C*N),C))                                        \n",
+    "        for i in range(int(C*N)) :\n",
+    "          x = selected_classes.index(query_labels[i])                           # creation of 1-hot for true labels\n",
+    "          query_y[i][x] = 1.\n",
+    "        query_y = torch.from_numpy(query_y).to(device)    \n",
+    "        for i in range(n_inner_iter) :\n",
+    "          s_logits = fnet(tsupport_patches)\n",
+    "          i_loss = F.cross_entropy(s_logits,support_y.argmax(axis=1))\n",
+    "          z_loss = i_loss\n",
+    "          z_loss = torch.mean(z_loss)\n",
+    "          diffopt.step(z_loss)\n",
+    "        q_logits = fnet(tquery_patches)\n",
+    "        q_real = query_y.argmax(axis=1)\n",
+    "        q_real = q_real.long()\n",
+    "        q_loss = F.cross_entropy(q_logits,q_real)\n",
+    "        qzq_loss = q_loss\n",
+    "        total_loss += qzq_loss\n",
+    "        qzq_loss.detach()\n",
+    "        qzq_loss.backward()        \n",
+    "        eq = (q_logits.argmax(dim=1) == q_real).sum().item()\n",
+    "        accuracy = eq/len(q_real)  \n",
+    "        accuracies.append(accuracy)\n",
+    "    meta_opt.step()\n",
+    "    accuracies = torch.from_numpy(np.asarray(accuracies))\n",
+    "    print(k,'Loss',total_loss,..., 'Accuracy', torch.mean(accuracies))\n",
+    "    if (k+1)%40==0 :\n",
+    "       checkpoint_prefix1 = checkpoint_prefix1 + str(k+360)\n",
+    "       torch.save({'model_state_dict': maml_model.state_dict(),\n",
+    "            'optimizer_state_dict': meta_opt.state_dict(),\n",
+    "            'loss': total_loss,\n",
+    "            }, checkpoint_prefix1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a28c376",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "272ee155",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa014c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9870f56b",
    "metadata": {},
    "outputs": [],
